tests/baselines/reference/unusedParameterProperty1.errors.txt
tests/cases/compiler/unusedParameterProperty1.ts(3,25): error TS6138: Property 'used' is declared but never used.


==== tests/cases/compiler/unusedParameterProperty1.ts (1 errors) ====
    
    class A {
        constructor(private used: string) {
                            ~~~~
!!! error TS6138: Property 'used' is declared but never used.
            let foge = used;
            foge += "";
        }
    }
    